setup macro support

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -15,11 +15,15 @@ include: package:lints/recommended.yaml
 
 # Uncomment the following section to specify additional rules.
 
-# linter:
-#   rules:
-#     - camel_case_types
+linter:
+  rules:
+    - use_super_parameters
+    - require_trailing_commas
+    - prefer_single_quotes
 
-# analyzer:
+analyzer:
+  enable-experiment:
+    - macros
 #   exclude:
 #     - path/to/excluded/files/**
 
